[package]
name = "hello"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
authors = ["Jonathan 'theJPster' Pallant <neotron@thejpster.org.uk>"]
description = "Hello World for Neotron systems"

[dependencies]
neotron-sdk = { path = "../..", features = ["application"] }
#
# NB: This is in a workspace, so these settings are in the workspace file.
#[profile.dev]
#panic = "abort"
#
#[profile.release]
#panic = "abort"
