[package]
name = "panic"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
authors = ["Jonathan 'theJPster' Pallant <neotron@thejpster.org.uk>"]
description = "Hello World for Neotron systems"

[dependencies]
neotron-sdk = { workspace = true, features = ["fancy-panic"] }

# See workspace for profile settings
